# slides

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SYNTAX.md  USAGE.md  build_and_install.sh  install.sh  tag.sh
.claude/commands/: increment-commit-push-tag.md
.github/workflows/: ci.yml  release.yml
examples/: demo.md
src/: help.rs  main.rs  update.rs
src/editor/: mod.rs  page.rs  serialize.rs  types.rs
src/layout/: mod.rs  primitives.rs  solver.rs
src/parser/: directives.rs  frontmatter.rs  markdown.rs  mod.rs
src/presenter/: mod.rs
src/render/: export.rs  mod.rs  theme.rs
src/server/: mod.rs  routes.rs  watcher.rs
static/css/: core.css
static/js/: slides.js
templates/: deck.html.j2  init.md
themes/: dark.css  minimal.css
