[package]
name = "slides"
version = "0.1.9"
edition = "2024"
description = "A CLI tool that renders markdown files as presentations"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
clap = { version = "4", features = ["derive"] }
minijinja = "2"
notify = "7"
notify-debouncer-mini = "0.5"
pulldown-cmark = { version = "0.12", features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
open = "5"

[features]
pdf = ["dep:headless_chrome"]

[dependencies.headless_chrome]
version = "1"
optional = true

[dev-dependencies]
tempfile = "3"
